--- a/d7/dcc/projekt_8ino.html
+++ b/d7/dcc/projekt_8ino.html
@@ -143,7 +143,7 @@ Functions</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Funkcija za povezivanje na WiFi mrežu i Firebase bazu podataka. </p>
-<p>Spaja se na WiFi mrežu koristeći SSID i lozinku, a zatim inicijalizira vezu s Firebaseom. </p>
+<p>Spaja se na WiFi mrežu koristeći SSID i lozinku, a zatim inicijalizira vezu s Firebase. </p>
 <div id="dynsection-0" onclick="return toggleVisibility(this)" class="dynheader closed" style="cursor:pointer;">
   <img id="dynsection-0-trigger" src="../../closed.png" alt="+"/> Here is the caller graph for this function:</div>
 <div id="dynsection-0-summary" class="dynsummary" style="display:block;">
